import com.github.spotbugs.snom.Effort
import com.github.spotbugs.snom.Confidence

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'checkstyle'
    id 'com.github.spotbugs' version '6.4.4'
    id 'com.diffplug.spotless' version '7.0.2'
}

group = 'com.flamingo.ai'
version = '0.0.1-SNAPSHOT'
description = 'A NotebookLM clone for localhost - AI-powered document Q&A'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    langchain4jVersion = '1.11.0'
    tikaVersion = '3.2.3'
    resilience4jVersion = '2.2.0'
    testcontainersVersion = '1.20.4'
}

dependencies {
    // ============ Spring Boot Starters ============
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aspectj'

    // ============ SQLite ============
    runtimeOnly 'org.xerial:sqlite-jdbc:3.45.3.0'
    implementation 'org.hibernate.orm:hibernate-community-dialects'

    // ============ Elasticsearch ============
    implementation 'co.elastic.clients:elasticsearch-java:9.0.0'
    // Required by Rest5Client in ES 9.0.0 (fixed in 9.0.1)
    implementation 'commons-logging:commons-logging:1.3.5'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // ============ LangChain4j ============
    implementation "dev.langchain4j:langchain4j:${langchain4jVersion}"
    implementation "dev.langchain4j:langchain4j-open-ai:${langchain4jVersion}"

    // ============ Document Processing (Apache Tika) ============
    implementation "org.apache.tika:tika-core:${tikaVersion}"
    implementation "org.apache.tika:tika-parsers-standard-package:${tikaVersion}"

    // ============ Structure-Aware Document Parsing ============
    // PDFBox for PDF heading/table/image extraction (Apache 2.0)
    implementation 'org.apache.pdfbox:pdfbox:3.0.5'
    // Commonmark for Markdown AST parsing (BSD-2-Clause)
    implementation 'org.commonmark:commonmark:0.22.0'

    // ============ Resilience ============
    implementation "io.github.resilience4j:resilience4j-spring-boot3:${resilience4jVersion}"
    implementation "io.github.resilience4j:resilience4j-circuitbreaker:${resilience4jVersion}"
    implementation "io.github.resilience4j:resilience4j-retry:${resilience4jVersion}"
    implementation "io.github.resilience4j:resilience4j-micrometer:${resilience4jVersion}"

    // ============ Metrics & Observability ============
    implementation 'io.micrometer:micrometer-registry-prometheus'
    runtimeOnly 'io.micrometer:micrometer-registry-otlp'

    // ============ Utilities ============
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'com.google.guava:guava:33.0.0-jre'

    // ============ Development ============
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    // ============ Testing ============
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation "org.testcontainers:testcontainers:${testcontainersVersion}"
    testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
    testImplementation "org.testcontainers:elasticsearch:${testcontainersVersion}"
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Test Lombok
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

// ============ Spotless (Code Formatting) ============
spotless {
    java {
        target 'src/**/*.java'
        googleJavaFormat('1.19.2')
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

// ============ Checkstyle ============
checkstyle {
    toolVersion = '10.12.7'
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    maxWarnings = 0
    maxErrors = 0
}

tasks.withType(Checkstyle).configureEach {
    reports {
        xml.required = true
        html.required = true
    }
}

// ============ SpotBugs ============
spotbugs {
    toolVersion = '4.9.8'
    effort = Effort.valueOf('MAX')
    reportLevel = Confidence.valueOf('DEFAULT')
    excludeFilter = file("${rootDir}/config/spotbugs/exclude-filter.xml")
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
    reports {
        xml.required = true
        html.required = true
    }
}

// ============ JaCoCo (Code Coverage) ============
jacoco {
    toolVersion = '0.8.11'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/config/**',
                '**/dto/**',
                '**/exception/**',
                '**/domain/enums/**',
                '**/domain/entity/**',
                '**/api/rest/**',
                '**/*Application*'
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.80
            }
        }
    }
}

// ============ Test Configuration ============
test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

// ============ Integration Tests ============
sourceSets {
    integrationTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/integrationTest/java')
        }
        resources.srcDir file('src/integrationTest/resources')
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
}

tasks.register('integrationTest', Test) {
    description = 'Runs integration tests.'
    group = 'verification'
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    useJUnitPlatform()
    shouldRunAfter test
}

// ============ Quality Check Task ============
tasks.register('qualityCheck') {
    description = 'Runs all quality checks'
    group = 'verification'
    dependsOn 'spotlessCheck', 'checkstyleMain', 'checkstyleTest',
              'spotbugsMain', 'spotbugsTest', 'test'
}

check.dependsOn qualityCheck

// ============ Boot Run UTF-8 Configuration ============
// Force UTF-8 encoding for console output (fixes Chinese character display)
tasks.named('bootRun') {
    systemProperty 'file.encoding', 'UTF-8'
    systemProperty 'console.encoding', 'UTF-8'
    systemProperty 'sun.stdout.encoding', 'UTF-8'
    systemProperty 'sun.stderr.encoding', 'UTF-8'
}
